# ruby-ui

./: .env.development  .env.production  .gitignore  README.md  package.json  test.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/act/: action.rs  keyboard.rs  mod.rs  mouse.rs  send.rs
src-tauri/src/api/: color.rs  mod.rs  start.rs  sys.rs
src-tauri/src/global/: common.rs  global.rs  init.rs  mod.rs  model.rs
src-tauri/src/memory/: read.rs
src-tauri/src/rgb/: check.rs  mod.rs  pick.rs
src-tauri/src/start/: start.rs
src-tauri/src/test/: test.json  test.rs
src-tauri/src/user/: user.rs
src/api/: element.tsx  operate.tsx
src/api/system/: user.tsx
src/components/OperateX6/: OperateX6.css  componentFactory.ts  config.ts  contextMenu.ts  graphConfig.ts  index.tsx  types.ts
src/model/: operate.tsx
src/pages/Content/: Content.css  index.tsx
src/pages/Content/Copy/: Copy.css  index.tsx
src/pages/Content/DoOperate/: DoOperate.css  index.tsx
src/pages/Content/Operate/: Operate.css  index.tsx
src/pages/Content/Operate/OperateCard/: OperateCard.css  index.tsx
src/pages/Content/Panel/: ActionDrawer.tsx  BlurCircle.tsx  Panel.css  index.tsx
src/pages/Header/: Header.css  index.tsx
src/utils/: common.tsx  requets.tsx
